<?xml version="1.0"?>
<package>
  <name>gdc_touch_backend</name>
  <version>1.2.0</version>
  <description>Backend for gdc_touch receiving messages via rosbridge websocket.</description>

  <maintainer email="mattb@cs.utexas.edu">Matt Broussard</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/mattbroussard/gdc_touch_backend</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rosbridge_server</run_depend>
  <run_depend>rospy</run_depend>
</package>
